--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -1,7 +1,16 @@
-name: Mirroring
+name: chocolatine
+on:
+  push:
+    branches-ignore:
+      - 'ga-ignore-**'
+  pull_request:
+    branches-ignore:
+      - 'ga-ignore-**
 
-on: [push, delete]
-
+env:
+  MIRROR_URL:git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-leo.l-huillier.git
+  EXECUTABLES:
+      
 jobs:
   to_gitlab:
     runs-on: ubuntu-latest
@@ -15,3 +24,26 @@ jobs:
             git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-leo.l-huillier.git
           ssh_private_key:               
             ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+            
+
+jobs:
+  check_repository_cleanliness:
+    runs-on: ubuntu-latest
+    steps:
+      - name: cloning directory into the machine
+        uses: actions/checkout@v3
+      - name: error_output
+        run: echo "::error file=,line=1,endLine=0,title=Check if the repository is clean and void of any unwanted files (temp files, binary files, etc.)::Process completed with exit code 1"
+      - name: check_repository_cleanliness
+        run: |
+            ILLEGAL_FILES_FOUND=0
+            ILLEGAL_FILES="$(find -iname "*~" -o -iname "*pain_au_chocolat*" -o -iname "*#*" -o -iname "*.exe" -o -iname "*.sh" -o -iname "*.so" -o -iname "*.o" -o -iname "*.gcda" -o -iname "*.gcov" -o -iname "tmp" -o -iname "*.a" -o -iname "*-;" -o -iname "*.gcno" -type f,d)"
+            for FILE in $ILLEGAL_FILES
+            do
+              echo "::error file=$FILE,line=1,endLine=0,title=Unwanted file detected::$FILE"
+              ILLEGAL_FILES_FOUND=1
+            done
+      - name: check_program_compilation
+        uses: docker://alpine:3.8
+      - name: run_tests
+        uses: docker://docker.io/epitechcontent/epitest-docker:latest
