--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -5,7 +5,7 @@ on:
       - 'ga-ignore-**'
   pull_request:
     branches-ignore:
-      - 'ga-ignore-**
+      - 'ga-ignore-**'
 
 env:
   MIRROR_URL:git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-leo.l-huillier.git
