--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -7,6 +7,8 @@ on:
     branches-ignore:
       - 'ga-ignore-**'
 
+env:
+  MIRROR_URL:git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-leo.l-huillier.git
       
 jobs:
   to_gitlab:
