--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -25,6 +25,8 @@ jobs:
   check_repository_cleanliness:
     runs-on: ubuntu-latest
     steps:
+      - name: cloning directory into the machine
+        uses: actions/checkout@v3
       - name: error_output
         run: echo "::error file=,line=1,endLine=0,title=Check if the repository is clean and void of any unwanted files (temp files, binary files, etc.)::Process completed with exit code 1"
       - name: check_repository_cleanliness
