--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -38,3 +38,6 @@ jobs:
               echo "::error file=$FILE,line=1,endLine=0,title=Unwanted file detected::$FILE"
               ILLEGAL_FILES_FOUND=1
             done
+             - if: 'ILLEGAL_FILES_FOUND = 1'
+              when: manual
+              allow_failure: true
