--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -37,8 +37,10 @@ jobs:
               echo "::error file=$FILE,line=1,endLine=0,title=Unwanted file detected::$FILE"
               ILLEGAL_FILES_FOUND=1
             done
-            
+
       - name: y'a un truc qui vas pas 
+        run: |
         - if: 'ILLEGAL_FILES_FOUND = 1'
         #echo "::error Filename $filename doesn't match possible files" && exit 1 ; done
          allow_failure: true
+         done
