--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -38,4 +38,4 @@ jobs:
               ILLEGAL_FILES_FOUND=1
             done
             - if: 'ILLEGAL_FILES_FOUND = 1'
-            allow_failure: true
+            exit 1
