--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -30,7 +30,16 @@ jobs:
             - if: 'ILLEGAL_FILES_FOUND = 1'
             exit 1
 
-  to_gitlab:
+  check_program_compilation
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      -name: launch_make
+        run: make
+      -name: launche_make_clean
+        run: make clean
+
+  push_to_mirror:
     runs-on: ubuntu-latest
     steps:                                 
       - uses: actions/checkout@v3
