--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -30,7 +30,7 @@ jobs:
             - if: 'ILLEGAL_FILES_FOUND = 1'
             exit 1
 
-  check_program_compilation
+  check_program_compilation:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
