--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -9,15 +9,16 @@ on:
 
 env:
   MIRROR_URL: git@github.com:EpitechPromo2026/B-DOP-200-PAR-2-1-chocolatine-leo.l-huillier.git
+  EXECUTABLES: fazzbizz
   
 jobs:
 
   check_repository_cleanliness:
     runs-on: ubuntu-latest
     steps:
-      - name: cloning directory into the machine
-        uses: actions/checkout@v3
-       
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: check_repository_cleanliness
         run: |
             ILLEGAL_FILES_FOUND=0
@@ -40,6 +41,14 @@ jobs:
         run: make
       - name: launche_make_clean
         run: make clean
+      - name: test_compilation
+        run: |
+             COMPILATION=0
+             for FILE in ${{ env.EXECUTABLES}}
+             do
+               ./$FILE
+               COMPILATION=echo $?
+             done
 
   push_to_mirror:
     runs-on: ubuntu-latest
