check program compilation3

--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -46,7 +46,7 @@ jobs:
              COMPILATION=0
              for FILE in ${{ env.EXECUTABLES}}
              do
-               ./$FILE
+               run: $FILE
                COMPILATION=echo $?
              done
 
