--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -44,12 +44,13 @@ jobs:
         run: make clean
       - name: test_compilation
         run: |
-             COMPIL="$(find -iname "${{ env.EXECUTABLES}}")"
-             for FILE in COMPIL
-             do
-               -if ![ -f $FILE -a -x $FILE ]
-                 exit 1
-             done
+          COMPIL=$(echo ${{ env.EXECUTABLES}} | tr ",")
+          for FILE in $COMPIL
+          do
+            -if [ -f $FILE -a -x $FILE ]
+              exit 1
+            echo "$FILE"
+          done
 
 
   push_to_mirror:
