check program compilation8

--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -44,7 +44,7 @@ jobs:
         run: make clean
       - name: test_compilation
         run: |
-          COMPIL=$(echo ${{ env.EXECUTABLES}} | tr ",")
+          COMPIL=$(echo ${{ env.EXECUTABLES}} | tr "," "\n")
           for FILE in $COMPIL
           do
             -if [ -f $FILE -a -x $FILE ]
