check program compilation9

--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -47,7 +47,7 @@ jobs:
           COMPIL=$(echo ${{ env.EXECUTABLES}} | tr "," "\n")
           for FILE in $COMPIL
           do
-            -if [ -f $FILE -a -x $FILE ]
+            -if: test -x $FILE = 1
               exit 1
             echo "$FILE"
           done
