--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -53,6 +53,16 @@ jobs:
               exit 1
           done
 
+  run_tests
+    runs-on: ubuntu-latest
+    container: epitechcontent/epitest-docker
+    steps:                                 
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name run test
+        run: make test_run
+
 
   push_to_mirror:
     runs-on: ubuntu-latest
