--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -53,7 +53,7 @@ jobs:
               exit 1
           done
 
-  run_tests
+  run_tests:
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker
     steps:                                 
