--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -61,7 +61,9 @@ jobs:
         with:
           fetch-depth: 0
       - name run test
-        run: make test_run
+        run: |
+             make test_run
+             done
 
 
   push_to_mirror:
