--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -60,10 +60,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name run test
-        run: |
-             make test_run
-             done
+      - name run_test
+        run: make test_run
 
 
   push_to_mirror:
