--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: run_test
-        run: make test_run
+        run: make tests_run
 
 
   push_to_mirror:
